@@ -21,6 +21,7 @@
  */
 
 #include "config.h"
+#if ENABLE(SVG)
 #include "RenderSVGResourceMarker.h"
 
 #include "GraphicsContext.h"
@@ -198,3 +199,5 @@ void RenderSVGResourceMarker::calcViewport()
 }
 
 }
+
+#endif // ENABLE(SVG)
