@@ -1,3 +1,14 @@
+2010-05-12  Young Han Lee  <joybro@company100.net>
+
+        Reviewed by Darin Adler.
+
+        Add missing ENABLE(SVG) guards.
+        https://bugs.webkit.org/show_bug.cgi?id=38892
+
+        * rendering/RenderSVGResourceClipper.cpp:
+        * rendering/RenderSVGResourceMarker.cpp:
+        * rendering/RenderSVGResourceMasker.cpp:
+
 2010-05-12  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Yury Semikhatsky.
